--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -12,7 +12,7 @@ theme : template
 # Doc: https://gitpitch.com/docs/settings/custom-theme
 #
 theme-override: assets/css/PITCHME.css
-theme-background : [ "gray" ]
+theme-background : [ #e8e8e8 ]
 
 #
 # Logo Setting
